--- a/shuerte.html
+++ b/shuerte.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>舒尔特方格</title>
-    <link rel="shortcut icon" href=".水花头像.jpg">
-    <link rel="stylesheet" type="text/css".舒尔特方格.css">
+    <link rel="stylesheet" type="text/css" href=".shuerte.css">
 </head>
 
 <body>
