--- a/shuerte.html
+++ b/shuerte.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>舒尔特方格</title>
-    <link rel="stylesheet" type="text/css" href=".shuerte.css">
+    <link rel="stylesheet" type="text/css" href="shuerte.css">
 </head>
 
 <body>
